MP-2375 support for transfer details UI
