# src/UIAPIServer/api.yaml
@@ -64,6 +64,46 @@ paths:
                 items:
                   $ref: '#/components/schemas/Transfer'
 
+  /transferErrors:
+    get:
+      summary: Retrieves all transfers with errors
+      operationId: findAllTransferErrors
+      parameters:
+        - in: query
+          name: startTimestamp
+          required: false
+          schema:
+            $ref: "#/components/schemas/Timestamp"
+        - in: query
+          name: endTimestamp
+          required: false
+          schema:
+            $ref: "#/components/schemas/Timestamp"
+        - in: query
+          name: id
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: institution
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: status
+          required: false
+          schema:
+            $ref: "#/components/schemas/TransferStatus"
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transfer'
+
   /transfers/{transferId}:
     get:
       summary: Retrieves a transfer
@@ -82,6 +122,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Transfer'
+
+  /transfers/{transferId}/details:
+    get:
+      summary: Retrieves full details for a transfer
+      operationId: findTransferDetails
+      parameters:
+        - name: transferId
+          in: path
+          description: UUID of the transfer to get
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransferDetails'
+
+
 
   /hourlyFlow:
     get:
@@ -765,6 +826,7 @@ components:
           type: string
         details:
           type: string
+
     TransferDetails:
       type: object
       properties:
@@ -774,6 +836,15 @@ components:
           type: integer
         amount:
           $ref: '#/components/schemas/Amount'
+        currency:
+          $ref: '#/components/schemas/Currency'
+        institution:
+          type: string
+        direction:
+          type: string
+          enum:
+            - INBOUND
+            - OUTBOUND
         sender:
           type: string
         recipient:
@@ -782,6 +853,237 @@ components:
           type: string
         status:
           $ref: "#/components/schemas/TransferStatus"
+        initiatedTimestamp:
+          $ref: "#/components/schemas/Timestamp"
+        technicalDetails:
+          $ref: "#/components/schemas/TransferTechnicalDetails"
+
+    TransferTechnicalDetails:
+      type: object
+      properties:
+        schemeTransferId:
+          $ref: "#/components/schemas/MojaloopIdentifier"
+        homeTransferId:
+          type: string
+        transactionId:
+          $ref: "#/components/schemas/MojaloopIdentifier"
+        payerParty:
+          $ref: "#/components/schemas/TransferParty"
+        payeeParty:
+          $ref: "#/components/schemas/TransferParty"
+        quoteId:
+          $ref: "#/components/schemas/MojaloopIdentifier"
+        transferState:
+          $ref: "#/components/schemas/InternalTransferStatus"
+        getPartiesRequest:
+          $ref: "#/components/schemas/MojaloopRequest"
+        getPartiesResponse:
+          $ref: "#/components/schemas/MojaloopRequest"
+        quoteRequest:
+          $ref: "#/components/schemas/MojaloopRequest"
+        quoteResponse:
+          $ref: "#/components/schemas/MojaloopRequest"
+        transferPrepare:
+          $ref: "#/components/schemas/MojaloopRequest"
+        transferFulfilment:
+          $ref: "#/components/schemas/MojaloopRequest"
+        lastError:
+          $ref: '#/components/schemas/TransferError'
+
+    TransferError:
+      type: object
+      description: This object represents a Mojaloop API error received at any time during the transfer process
+      properties:
+        httpStatusCode:
+          type: integer
+          description: The HTTP status code returned to the caller. This is the same as the actual HTTP status code returned with the response.
+        mojaloopError:
+          description: If a transfer process results in an error callback during the asynchronous Mojaloop API exchange, this property will contain the underlying Mojaloop API error object.
+          $ref: '#/components/schemas/MojaloopError'
+
+    GeneralError:
+      type: object
+      description: This object may represent a number of different error object types and so its properties may vary significantly.
+
+    MojaloopError:
+      type: object
+      properties:
+        errorInformation:
+          $ref: '#/components/schemas/ErrorInformation'
+
+    ErrorInformation:
+      title: ErrorInformation
+      type: object
+      description: A Mojaloop API error information construct.
+      properties:
+        errorCode:
+          $ref: '#/components/schemas/ErrorCode'
+          description: Specific error number.
+        errorDescription:
+          $ref: '#/components/schemas/ErrorDescription'
+          description: Error description string.
+        extensionList:
+          $ref: '#/components/schemas/ExtensionListComplex'
+          description: 'Optional list of extensions, specific to deployment.'
+      required:
+        - errorCode
+        - errorDescription
+
+    ErrorCode:
+      title: ErrorCode
+      type: string
+      pattern: '^[1-9]\d{3}$'
+      description: >
+        The API data type errorCode is a JSON String of four characters,
+        consisting of digits only. Negative numbers are not allowed. A leading
+        zero is not allowed. Each error code in the API is a four-digit number,
+        for example, 1234, where the first number (1 in the example) represents
+        the high-level error category, the second number (2 in the example)
+        represents the low-level error category, and the last two numbers (34 in
+        the example) represents the specific error.
+
+    ErrorDescription:
+      title: ErrorDescription
+      type: string
+      minLength: 1
+      maxLength: 128
+      description: Error description string.
+
+    MojaloopIdentifier:
+      pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      type: string
+      description: A Mojaloop API identifier (UUID).
+
+    MojaloopRequest:
+      type: object
+      properties:
+        headers:
+          type: object
+        body:
+          type: object
+
+    InternalTransferStatus:
+      type: string
+      enum:
+      - ERROR_OCCURRED
+      - WAITING_FOR_PARTY_ACCEPTANCE
+      - WAITING_FOR_QUOTE_ACCEPTANCE
+      - COMPLETED
+
+    TransferParty:
+      type: object
+      required:
+        - idType
+        - idValue
+      properties:
+        type:
+          $ref: '#/components/schemas/payerType'
+        idType:
+          $ref: '#/components/schemas/idType'
+        idValue:
+          $ref: '#/components/schemas/idValue'
+        idSubValue:
+          $ref: '#/components/schemas/idSubValue'
+        displayName:
+          type: string
+          description: Display name of the sender, if known.
+        firstName:
+          type: string
+          description: Party first name.
+        middleName:
+          type: string
+          description: Party middle name.
+        lastName:
+          type: string
+          description: Party last name.
+        dateOfBirth:
+          $ref: '#/components/schemas/dateOfBirth'
+        merchantClassificationCode:
+          type: string
+          description: Up to 4 digits specifying the sender's merchant classification, if known and applicable.
+        fspId:
+          type: string
+          description: FSP with which the party is associated to.
+        extensionList:
+          $ref: '#/components/schemas/ExtensionList'
+
+    dateOfBirth:
+      type: string
+      pattern: ^(?:[1-9]\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)$
+      description: Date of birth in the form YYYY-MM-DD.
+
+    ExtensionListComplex:
+      type: object
+      description: Data model for the complex type ExtensionList
+      properties:
+        extension:
+          type: array
+          items:
+            $ref: '#/components/schemas/ExtensionItem'
+          minItems: 1
+          maxItems: 16
+          description: Number of Extension elements
+      required:
+        - extension
+
+    ExtensionItem:
+      type: object
+      properties:
+        key:
+          type: string
+          minLength: 1
+          maxLength: 32
+        value:
+          type: string
+          minLength: 1
+          maxLength: 128
+
+    ExtensionList:
+      type: array
+      items:
+        $ref: '#/components/schemas/ExtensionItem'
+      minItems: 0
+      maxItems: 16
+
+
+    payerType:
+      type: string
+      enum:
+      - CONSUMER
+      - AGENT
+      - BUSINESS
+      - DEVICE
+
+    idType:
+      type: string
+      enum:
+      - MSISDN
+      - ACCOUNT_ID
+      - EMAIL
+      - PERSONAL_ID
+      - BUSINESS
+      - DEVICE
+      - IBAN
+      - ALIAS
+      description: Below are the allowed values for the enumeration.
+
+        - MSISDN -  An MSISDN (Mobile Station International Subscriber Directory Number, that is, the phone number) is used as reference to a participant. The MSISDN identifier should be in international format according to the [ITU-T E.164 standard](https://www.itu.int/rec/T-REC-E.164/en). Optionally, the MSISDN may be prefixed by a single plus sign, indicating the international prefix.
+
+        - ACCOUNT_ID - A bank account number or FSP account ID should be used as reference to a participant. The ACCOUNT_ID identifier can be in any format, as formats can greatly differ depending on country and FSP.
+
+    idValue:
+      type: string
+      minLength: 1
+      maxLength: 128
+      description: Identifier of the party.
+
+    idSubValue:
+      type: string
+      minLength: 1
+      maxLength: 128
+      description: Either a sub-identifier of a `{idValue}`, or a sub-type of the `{idType}`, normally a `{personalIdType}`
+
+
 
     Error:
       type: object
@@ -807,6 +1109,7 @@ components:
             - FROM HUB
         committedDate:
           $ref: '#/components/schemas/Timestamp'
+
     Balances:
       type: object
       properties:
